syntax = "proto3";
package exomonad.effects.merge_pr;

message MergePrRequest {
  int64 pr_number = 1;
  // Merge strategy: "squash" (default), "merge", "rebase"
  string strategy = 2;
  // Working directory for git/jj operations. Required for agents in worktrees.
  string working_dir = 3;
}

message MergePrResponse {
  bool success = 1;
  string message = 2;
  // True if jj git fetch was run after merge
  bool jj_fetched = 3;
}

service MergePrEffects {
  rpc MergePr(MergePrRequest) returns (MergePrResponse);
}
